@@ -12,8 +12,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <uima.version>3.5.0</uima.version>
         <utilities.version>8bfa54cbe4</utilities.version>
-        <ttlab.typesystem.version>bd6e684b12</ttlab.typesystem.version>
+        <ttlab.typesystem.version>2f04defb08</ttlab.typesystem.version>
         <duui.version>7cef2433b5</duui.version>
         <dkpro.core.version>2.4.0</dkpro.core.version>
     </properties>
@@ -37,7 +38,10 @@
                     <argLine>
                         --illegal-access=permit
                         --add-opens java.base/java.util=ALL-UNNAMED
-                        <!--                        add-opens for use in JUnit-Tests...-->
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.nio=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                        <!-- add-opens for use in JUnit-Tests...-->
                     </argLine>
                 </configuration>
             </plugin>
@@ -48,6 +52,9 @@
                 <configuration>
                     <argLine>
                         --illegal-access=permit
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.nio=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -77,6 +84,29 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.apache.uima</groupId>
+            <artifactId>uimaj-core</artifactId>
+            <version>${uima.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.uima</groupId>
+            <artifactId>uimafit-core</artifactId>
+            <version>${uima.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.texttechnologylab</groupId>
+            <artifactId>UIMATypeSystem</artifactId>
+            <version>${ttlab.typesystem.version}</version>
+            <!--            <scope>jar</scope>-->
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.maven-download-plugin</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -146,12 +176,7 @@
             <version>${utilities.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.github.texttechnologylab</groupId>
-            <artifactId>UIMATypeSystem</artifactId>
-            <version>${ttlab.typesystem.version}</version>
 
-        </dependency>
 
         <dependency>
             <groupId>org.jsoup</groupId>
